--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 /*---------navigation-----------*/
 #navbar{
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 10;
 }
